application/ui/src/features/prompt-sidebar/prompt-modes/visual-prompt/captured-image/labels-management/label-badge.module.scss
.labelBadgeContainer {
    height: min-content;
    padding: var(--spectrum-global-dimension-size-50);
}

.badge {
    background-color: var(--labelBgColor);
    border-radius: var(--spectrum-alias-border-radius-regular);
    min-width: 0;
    padding: var(--spectrum-global-dimension-size-50) var(--spectrum-global-dimension-size-100);
    --foregroundColor: lch(from var(--labelBgColor) calc((50 - l) * infinity) 0 0);
    --spectrum-high-contrast-button-text: var(--foregroundColor);
    display: flex;

    .buttonsContainer {
        color: var(--foregroundColor);
        transition: width 0.6s;
        width: 0;
        & > button {
            display: none;
            opacity: 0;
            transition: opacity 0.6s;
        }
    }
}

.badge:hover {
    .buttonsContainer {
        position: relative;
        width: var(--spectrum-global-dimension-size-675);
        & > button {
            display: block;
            opacity: 1;
        }
    }
}

.selected,
.selected:focus {
    outline-offset: var(--spectrum-global-dimension-size-50);
    outline: var(--spectrum-global-dimension-size-50) solid var(--labelBgColor);
}

.buttonText {
    color: var(--foregroundColor);
    text-align: center;
    width: min-content;
    text-wrap: nowrap;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
    max-width: var(--spectrum-global-dimension-size-1200);
}

